@@ -109,6 +109,15 @@ write_zone(udb_base* udb, udb_ptr* z, zone_type* zone)
 	/* write all domains in the zone */
 	domain_type* walk;
 	rrset_type* rrset;
+	int n = 0, c = 0;
+	time_t t = time(NULL);
+
+	/* count domains */
+	for(walk=zone->apex; walk && domain_is_subdomain(walk, zone->apex);
+		walk=domain_next(walk)) {
+		n++;
+	}
+	/* write them */
 	for(walk=zone->apex; walk && domain_is_subdomain(walk, zone->apex);
 		walk=domain_next(walk)) {
 		/* write all rrsets (in the zone) for this domain */
@@ -117,6 +126,12 @@ write_zone(udb_base* udb, udb_ptr* z, zone_type* zone)
 				if(!write_rrset(udb, z, rrset))
 					return 0;
 			}
+		}
+		/* only check every ... domains, and print pct */
+		if(++c % ZONEC_PCT_COUNT == 0 && time(NULL) > t + ZONEC_PCT_TIME) {
+			t = time(NULL);
+			VERBOSITY(1, (LOG_INFO, "write %s %d %%",
+				zone->opts->name, c*100/n));
 		}
 	}
 	return 1;
